# open-window

./: .gitignore  .ignore  Cargo.toml  README.md
docs/: index.css  index.html  manifest.json  owapp.js  owapp_bg.wasm  service_worker.js
open_window/src/open_window/: measurement.rs
owapp/: Cargo.toml  Trunk.toml  index.css  index.html  manifest.json  service_worker.js
owapp/src/: lib.rs  main.rs  measurement.rs  number_input.rs  relative_humidity.rs  temperature.rs
owcli/: Cargo.toml  build.rs
owcli/completions/: _owcli  _owcli.ps1  owcli.bash  owcli.elv  owcli.fish
owcli/man/: owcli.1
owcli/src/: cli.rs  cli_input.rs  cli_output.rs  main.rs
owcli/tests/: cli_tests.rs
owlib/: Cargo.toml
owlib/src/: lib.rs
owlib/src/open_window/: measurement.rs  mod.rs  relative_humidity.rs  temperature.rs
owserver/: Cargo.toml
owserver/src/: main.rs
src/open_window/: Cargo.toml
src/open_window/src/: main.rs
