[package]
name = "owcli"
version = "0.1.0"
edition = "2021"
description = "Program answers a question whether you should open window to decrease indoor humidity based on indoor / outdoor temperature and relative humidity"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive", "cargo"] }
owlib = { path = "../owlib" }

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
