[package]
name = "owcli"
version = "0.1.0"
edition = "2021"
authors = ["szmergiell <szmergiel@pm.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/szmergiell/open_window"
repository = "https://github.com/szmergiell/open_window"
keywords = ["cli", "humidity", "dew", "point"]
categories = ["command-line-utilities", "science"]
description = "Program answers a question whether you should open window to decrease indoor humidity based on indoor / outdoor temperature and relative humidity"

[dependencies]
clap = { version = "4.1.1", features = ["derive", "cargo"] }
human-panic = "1.0.3"
owlib = { path = "../owlib" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"

[build-dependencies]
clap = { version = "4.1.1" }
clap_complete = "4.1.1"
clap_mangen = "0.2.7"
