[package]
name = "owserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owlib = { path = "../owlib" }
axum = "0.6.4"
hyper = { version = "0.14.24", features = ["full"] }
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
http-api-problem = { version = "0.56.0", features = ["axum"] }
tower-http = { version = "0.3.5", features = ["cors"] }
